# COP-AI

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  start_bot_windows.bat
old_prompt_n8n/: sys_casual_chat_prompt.md  sys_inventory_prompt.md  sys_router_prompt.md  sys_sale_prompt.md
scripts/: seed_data.py
src/agent/: config.py  graph.py
src/agent/clients/: postgres.py
src/agent/domain/: models.py
src/agent/tools/: inventory.py  knowledge.py  menu.py  recipe.py  report.py  sales.py
